client/main.css
.data_from {
  opacity: 0.5;
}

* {
  font-family: Arial;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

@font-face {
  font-family: "ArialBlackS";
  src: url("Arial-Black_S.ttf");
}

.most {
  font-family: "ArialBlackS";
}

@font-face {
  font-family: "ArialBlack";
  src: url("ariblk.ttf");
}

.most_bez_s {
  font-family: "ArialBlack";
}

header {
  min-height: 5rem;
  display: flex;
  flex-direction: row;
  flex-shrink: 0;
  overflow-x: hidden;
  overflow-y: hidden;
}

header a {
  text-decoration: none;
  color: inherit;
}

.opakujici_most {
  background-image: url("images/oblouky.png");
  background-repeat: repeat-x;
  height: 23px;
}

.opakujici_most_naopak {
  background-image: url("images/oblouky_naopak.png");
  background-repeat: repeat-x;
  height: 23px;
}

main {
  flex-grow: 1;
  background-color: #828696;
  position: relative;
  padding-bottom: 23px;
}

@keyframes posun_most {
  100% {
    background-position: 362px;
  }
}

main .opakujici_most:first-child {
  width: 100%;
  animation: posun_most 30s linear infinite;
}

main .opakujici_most_naopak {
  width: 100%;
  animation: posun_most 30s linear infinite;
  animation-direction: reverse;
  position: absolute;
  bottom: 0;
}

@media only screen and (max-width: 529px) {

  main .opakujici_most:first-child,
  main .opakujici_most_naopak {
    background-size: 260px 16px !important;
    height: 16px !important;
  }
}

footer {
  height: 3rem;
  flex-shrink: 0;
  flex-grow: 0;
}

/* ---------------------------------------- generic header */

@media only screen and (max-width: 599px) {
  header {
    min-height: 5.5rem;
  }

  .generic_header h1 {
    margin-top: 3rem !important;
    margin-left: 0.5rem !important;
  }

  .generic_header .hlavicka_most_nad {
    height: 2.5rem !important;
    margin-top: 3rem !important;
  }
}

@media only screen and (min-width: 600px) {
  header {
    min-height: 6.5rem;
  }

  .generic_header h1 {
    font-size: 3rem !important;
    line-height: 3rem !important;
  }
}

@media only screen and (min-width: 850px) {
  header {
    min-height: 8rem;
  }
}

.generic_header h1 {
  display: block;
  width: auto;
  flex-shrink: 0;
  line-height: 2.5rem;
  margin-left: 3rem;
  margin-top: 3rem;
  font-size: 2.5rem;
  padding-right: 1rem;
}

.generic_header .hlavicka_most_nad {
  height: 2.5rem;
  margin-top: 3.5rem;
}

.generic_header .hlavicka_most_nad .opakujici_most {
  height: 12px !important;
  background-size: cover;
}

@media only screen and (max-width: 350px) {
  .generic_header h1 {
    margin-left: 0.5rem !important;
    margin-top: 0.3rem !important;
  }

  .generic_header .hlavicka_most_nad {
    position: absolute;
    left: 0.5rem;
  }
}

/* --------------------------------------- overlay */

@media only screen and (min-width: 850px) {
  .overlay-body * {
    font-size: larger;
  }
}

.overlay-body {
  display: none;
  width: 90vw;
  height: 90vh;
  z-index: 999;
  position: fixed;
  top: 5vh;
  left: calc(5vw - 2rem);
  overflow-y: scroll;
  overscroll-behavior: contain;
  background: rgb(113, 110, 126);
  padding: 0 2rem;
}

.overlay-lecturer {
  width: fit-content;
  font-size: 2rem;
  text-align: center;
  margin: 2rem auto;
}

.overlay-lecture {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

.overlay-background {
  position: fixed;
  width: 100vw;
  height: 100vh;
  z-index: 998;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.8);
}

.overlay-rooms,
.overlay-lecturer-info,
.overlay-annotation {
  margin-bottom: 0.5rem;
}

.overlay-back {
  cursor: pointer;
}


@media only screen and (min-width: 550px) {
  .overlay-back {
    font-size: 2rem;
    padding: 2rem 2vw;
    position: absolute;
    top: 0;
    right: 0;
  }
}

@media only screen and (max-width: 550px) {
  .overlay-back {
    font-size: 1.5rem;
    padding: 1rem 5rem;
    text-align: center;
  }

  .overlay-body {
    width: 80vw;
    left: calc(10vw - 2rem);
  }

  .overlay-lecturer {
    font-size: 1.5rem;
  }

  .overlay-lecture {
    font-size: 1.2rem;
  }
}

/* ---------------------------------------------- homepage */

.mosty_jako {
  max-width: 95vw;
  display: flex;
  align-items: center;
  font-size: xx-large;
  line-height: 5rem;
  padding: 3rem;
  width: fit-content;
  margin: 0 auto;
  background-image: url("images/obrazek_mostu.png");
  background-position: center;
  background-size: cover;
}

@media only screen and (max-height: 780px) {
  .mosty_jako {
    line-height: 9vh;
  }
}

@media only screen and (max-height: 700px) {
  .mosty_jako {
    line-height: 8vh;
  }
}

@media only screen and (max-width: 890px) {
  .mosty_jako {
    font-size: 3.5vw;
  }
}

@media only screen and (max-width: 660px) {
  .mosty_jako {
    padding: 1.5rem;
  }
}


/* ---------------------------------- harmonogram */
.harmonogram_disclaimer {
  width: fit-content;
  text-align: center;
  margin: 1rem auto 0 auto;
  line-height: 1.5rem;
}

.harmonogram_header h1 {
  display: block;
  width: auto;
  height: 2rem;
  flex-shrink: 0;
  line-height: 2rem;
  margin-left: 1rem;
  margin-top: 3rem;
  font-size: 2.5rem;
  padding-right: 1rem;
}

.hlavicka_most_nad {
  height: 2.5rem;
  margin-top: 3rem;
  font-size: smaller;
}

.hlavicka_most_nad .opakujici_most {
  height: 12px !important;
  background-size: cover;
}

@media only screen and (max-width: 360px) {
  .harmonogram_header h1 {
    width: 1rem;
    font-size: 1.5rem !important;
  }

  .day {
    left: 8.5rem !important;
  }

  .harmonogram_header .hlavicka_most_nad {
    margin-left: 6rem;
    font-size: 0.8rem;
    line-height: 0.8rem;
  }

  .harmonogram_header .hlavicka_most_nad .opakujici_most {
    background-size: 10rem;
  }
}
/* ... */

